--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "groq-sdk": "^0.5.0",
     "langchain": "^0.2.16",
+    "lucide-react": "^0.553.0",
     "mammoth": "^1.8.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
